--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     background-image: url('BG.jpg');
     background-size: cover;
     background-repeat: no-repeat;   
-    height: 1000px; 
+    /* height: 1000px;  */
     display: flex;
     justify-content: center;
     margin: 0;
